--- a/assets/css/sucess.css
+++ b/assets/css/sucess.css
@@ -6,7 +6,7 @@ img{
 }
 h1{
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
     font-size: medium;
 }
 #imagem{
@@ -16,6 +16,7 @@ h1{
     background-color: red;
     color: white;
     height: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #botao:hover{
