--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <footer>
-        <img src="../assets/images/footer.png" width="150px" height="100px" href="https://linktr.ee/Amanda420.2007?utm_source=linktree_profile_share&ltsid=21ba03a6-9a1e-4976-9565-96b86691a757">
-        <h1></h1>
+        <a href="https://linktr.ee/Amanda420.2007?utm_source=linktree_profile_share&ltsid=21ba03a6-9a1e-4976-9565-96b86691a757">
+        <img src="../assets/images/footer.png" width="150px" height="120px">
+        </a>
+        <p>TODOS OS DIREITOS RESERVADOS</p>
     </footer>
 </body>
 </html>
