--- a/layouts/footer.html
+++ b/layouts/footer.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../layouts/footer.css">
     <title>Document</title>
 </head>
+
 <body>
     <footer>
-        <a href="https://linktr.ee/Amanda420.2007?utm_source=linktree_profile_share&ltsid=21ba03a6-9a1e-4976-9565-96b86691a757">
-        <img src="../assets/images/footer.png" width="150px" height="120px">
+        <a
+            href="https://linktr.ee/Amanda420.2007?utm_source=linktree_profile_share&ltsid=21ba03a6-9a1e-4976-9565-96b86691a757">
+            <img src="../assets/images/footer.png" width="150px" height="120px">
         </a>
         <p>TODOS OS DIREITOS RESERVADOS</p>
     </footer>
 </body>
+
 </html>
