--- a/layouts/footer.css
+++ b/layouts/footer.css
@@ -8,4 +8,7 @@ footer {
     margin-bottom: -5px;
     margin-left: -5px;
     margin-right: -5px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
