mudança com target parent

--- a/layouts/header.html
+++ b/layouts/header.html
@@ -10,10 +10,10 @@
         <div id="divlogo"><img id="logo" src="../assets/images/logo.png" width="150px" height="100px"></div>
         <nav>
             <ul class="anav">
-                <li><a  href="../Index.html">Home</a></li>
-                <li><a  href="../pages/menu.html">Menu</a></li>
-                <li><a  href="../pages/sobre.html">Sobre nos</a></li>
-                <li><a  href="../pages/contato.html">Contato</a></li>
+                <li><a  href="../Index.html" target="_parent">Home</a></li>
+                <li><a  href="../pages/menu.html"  target="_parent">Menu</a></li>
+                <li><a  href="../pages/sobre.html" target="_parent">Sobre nos</a></li>
+                <li><a  href="../pages/contato.html" target="_parent">Contato</a></li>
             </ul>
         </nav>
     </header>
