--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -46,6 +46,7 @@ body{
     -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
     box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
     background-color: white;
+    margin-bottom: 20px;
 }
 .div_team{
     display: flex;
@@ -67,4 +68,8 @@ body{
 }
 .subtitle{
     text-align: center;
+}
+footer{
+    background-color: black;
+    margin-top: 10px
 }
