--- a/layouts/header.html
+++ b/layouts/header.html
@@ -3,18 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../layouts/header.css">
-    <title>header</title>
+    <title>Header</title>
 </head>
 <body>
-    <header>
-        <div id="divlogo"><img id="logo" src="../assets/images/logo.png" width="150px" height="100px"></div>
-        <nav>
-            <ul class="anav">
-                <li><a  href="../Index.html"  target="_parent">Menu</a></li>
-                <li><a  href="../pages/sobre.html" target="_parent">Sobre nos</a></li>
-                <li><a  href="../pages/contato.html" target="_parent">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
+    
 </body>
 </html>
