--- a/layouts/header.html
+++ b/layouts/header.html
@@ -6,6 +6,17 @@
     <title>Header</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <a href="../Index.html" class="logo" target="_parent"></a>
+            <nav>
+                <ul>
+                    <li><a href="../Index.html" target="_parent">MENU</a></li>
+                    <li><a href="../pages/sobre.html" target="_parent">SOBRE NÓS</a></li>
+                    <li><a href="../pages/contato.html" target="_parent">CONTATO</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
