--- a/layouts/header.css
+++ b/layouts/header.css
@@ -2,3 +2,11 @@ body{
     margin: 0;
     font-family: sans-serif;
 }
+header{
+    background-color: black;
+    color: white;
+    padding: 20px;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+}
