--- a/layouts/header.html
+++ b/layouts/header.html
@@ -8,12 +8,16 @@
 <body>
     <header>
         <div class="container">
-            <a href="../Index.html" class="logo" target="_parent"></a>
-            <nav>
+            <a href="../Index.html" class="logo" target="_parent">
+                <img src="../assets/images/sekiei" alt="logo do restaurante">
+            </a>
+        </div>  
+        </div>
+             <nav>
                 <ul>
                     <li><a href="../Index.html" target="_parent">MENU</a></li>
                     <li><a href="../pages/sobre.html" target="_parent">SOBRE NÓS</a></li>
-                    <li><a href="../pages/contato.html" target="_parent">CONTATO</a></li>
+                    <li><a href="../pages/contato.html" target="_parent">CONTACTE-NOS</a></li>
                 </ul>
             </nav>
         </div>
