--- a/layouts/header.css
+++ b/layouts/header.css
@@ -10,3 +10,11 @@ header{
     width: 100%;
     position: fixed;
 }
+.container{
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
