--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
     font-family: sans-serif;
-    background-color: moccasin;
+    background-color: rgba(0,0,0,0.6);
 }
 #title{
     margin-top: 0px
@@ -14,7 +14,7 @@ body{
     width: 90%;
     margin: auto;
     margin-top: 20px;
-    border-left: 5px solid lightsalmon;
+    border-left: 5px solid red;
     border-radius: 10px;
     padding-left: 20px;
     padding-right: 20px;
@@ -23,7 +23,7 @@ body{
     -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
     -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
     box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    background-color: white;
+    background-color: black;
 
 }
 .title2{
@@ -36,7 +36,7 @@ body{
     width: 90%;
     margin: auto;
     margin-top: 70px;
-    border-top: 5px solid lightsalmon;
+    border-top: 5px solid red;
     border-radius: 10px;
     padding-left: 20px;
     padding-right: 20px;
@@ -54,7 +54,7 @@ body{
 }
 .sect_team{
     margin: auto;
-    border-top: 5px solid lightsalmon;
+    border-top: 5px solid red;
     border-radius: 10px;
     padding-left: 20px;
     padding-right: 20px;
