--- a/assets/css/sobre.css
+++ b/assets/css/sobre.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
     font-family: sans-serif;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,0.9);
 }
 #title{
     margin-top: 0px
@@ -20,9 +20,9 @@ body{
     padding-right: 20px;
     padding-bottom: 5px;
     text-align: justify;
-    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9)git;
+    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
     background-color: black;
 
 }
@@ -42,9 +42,9 @@ body{
     padding-right: 20px;
     padding-bottom: 5px;
     text-align: justify;
-    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
     background-color: white;
     margin-bottom: 20px;
 }
@@ -60,9 +60,9 @@ body{
     padding-right: 20px;
     padding-bottom: 5px;
     text-align: justify;
-    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
     width: 33%;
     margin-right: 15px;
 }
