--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -6,7 +6,7 @@ body{
 }
 #h1{
     text-align: center;
-    border-left: solid 8px;
+    border-top: solid 3px;
     border-color: red;
     background-color: black;
     color: whitesmoke;
@@ -18,6 +18,8 @@ body{
     border-radius: 10px;
     margin-bottom: 50px;
     font-family: verdana;
+    margin-top: 20px;
+    padding-bottom: 5px ;
 }
 form{
     display: flex;
