--- a/assets/css/style.Index.css
+++ b/assets/css/style.Index.css
@@ -1,24 +1,56 @@
 body {
     margin: 0%;
-    background-color:moccasin;
+    background-image: url(https://i.pinimg.com/564x/99/95/d3/9995d323f18760ded6772465378b6525.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    font-family:sans-serif;
+    font-family: Verdana;
 }
 #h1_1 {
     text-align: center;
     margin-bottom: 0px;
     margin-top: 0px;
+    border: solid 3px;
+    border-color: red;
+    border-radius: 10px;
+    background-color: black;
+    color: whitesmoke;
+    margin-right: 500px;
+    margin-left: 500px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+#promosikiei {
+    border: solid 1.5px red;
+    margin-right: 780px;
+    border-radius: 10px;
+    padding: 3px;
+    text-align: center;
+}
+#promosikiei_2 {
+    color: whitesmoke;
+    margin-right: 1030px;
+    margin-left: 5px;
+    text-decoration: underline red;
 }
 #p_1 {
     text-align: center;
-    font-size: 30px;
+    font-size: 15px;
+    background-color: black;
+    color: whitesmoke;
+    border-bottom: solid 1.5px red;
+    border-top: solid 1.5px red;
+    text-transform: uppercase;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 #article_1 {
     border-left: solid 5px;
-    border-color: lightsalmon;
+    border-color: red;
     border-radius: 10px;
-    background-color: oldlace;
+    background-color: black;
     padding: 50px;
     margin-bottom: 30px;
     -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
@@ -26,14 +58,16 @@ body {
     box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
     width: 90%;
     margin-left: 10px;
+    color: whitesmoke;
 }
 #section_1 {
     display: flex;
 }
 .sections {
     border-left: solid 5px;
-    border-color: lightsalmon;
-    background-color: oldlace;
+    border-color: red;
+    background-color: black;
+    color: whitesmoke;
     border-radius: 10px;
     -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
     -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
@@ -41,14 +75,16 @@ body {
     width: 90%;
     margin-left: 10px;
     margin-right: 15px;
+    text-align: center;
 }
 .images {
     text-align: center;
 }
 .sections_2 {
     border-left: solid 5px;
-    border-color: lightsalmon;
-    background-color: oldlace;
+    border-color: red;
+    background-color: black;
+    color: whitesmoke;
     border-radius: 10px;
     -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
     -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
@@ -56,13 +92,15 @@ body {
     width: 90%;
     margin-left: 10px;
     margin-right: 15px;
+    text-align: center;
 }
 .articles {
     display: flex;
     margin-bottom: 25px;
 }
 h3 {
-    margin-left: 150px;
+    text-align: center;
+    text-decoration: underline red;
 }
 p {
     margin-left: 15px;
@@ -72,22 +110,6 @@ p {
     margin-bottom: 15px;
     
 }  
-#menu {
-    background-color: oldlace;
-    border-top: solid 5px lightsalmon;
-    padding: 0;
-    margin-bottom: 20px;
-    margin-left: 500px;
-    margin-right: 500px;
-    text-align: center;
-    width: 20%;
-    border-radius: 10px;
-    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    padding-bottom: 5px;
-}
 footer{
     background-color: black;
 }
-
