--- a/assets/css/succes.css
+++ b/assets/css/succes.css
@@ -6,8 +6,8 @@ img{
 }
 h1{
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
-    font-size: medium;
+    font-family: Verdana;
+    font-size: 20px;
 }
 #imagem{
     margin-bottom: 40px;
@@ -35,6 +35,9 @@ body{
     padding: 0%;
     align-items: center;
     background-image: url(https://i.pinimg.com/564x/99/95/d3/9995d323f18760ded6772465378b6525.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 #iframeFooter{
     bottom: 0%;
