--- a/assets/css/style.Index.css
+++ b/assets/css/style.Index.css
@@ -10,6 +10,7 @@ body {
     color: black;
     margin-bottom: 10px;
     margin-top: 20px;
+    font-size: 60px;
 }
 #promosikiei {
     border: solid 1.5px red;
