--- a/assets/css/style.Index.css
+++ b/assets/css/style.Index.css
@@ -1,14 +1,15 @@
 body {
     margin: 0%;
-    background-color:moccasin;
+    background-color:black;
     background-repeat: no-repeat;
     background-size: cover;
-    font-family:sans-serif;
+    font-family:Verdana;
+    color: whitesmoke;
 }
 #h1_1 {
     text-align: center;
     margin-bottom: 0px;
-    margin-top: 0px;
+    margin-top: 20px;
 }
 #p_1 {
     text-align: center;
@@ -16,14 +17,14 @@ body {
 }
 #article_1 {
     border-left: solid 5px;
-    border-color: lightsalmon;
+    border-color: red;
     border-radius: 10px;
-    background-color: oldlace;
+    background-color:black;
     padding: 50px;
     margin-bottom: 30px;
-    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
     width: 90%;
     margin-left: 10px;
 }
@@ -32,12 +33,12 @@ body {
 }
 .sections {
     border-left: solid 5px;
-    border-color: lightsalmon;
-    background-color: oldlace;
+    border-color: red;
+    background-color: black;
     border-radius: 10px;
-    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
     width: 90%;
     margin-left: 10px;
     margin-right: 15px;
@@ -47,12 +48,12 @@ body {
 }
 .sections_2 {
     border-left: solid 5px;
-    border-color: lightsalmon;
-    background-color: oldlace;
+    border-color: red;
+    background-color: black;
     border-radius: 10px;
-    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
     width: 90%;
     margin-left: 10px;
     margin-right: 15px;
@@ -73,8 +74,9 @@ p {
     
 }  
 #menu {
-    background-color: oldlace;
-    border-top: solid 5px lightsalmon;
+    background-color: white;
+    color: black;
+    border-top: solid 5px red;
     padding: 0;
     margin-bottom: 20px;
     margin-left: 500px;
@@ -82,9 +84,9 @@ p {
     text-align: center;
     width: 20%;
     border-radius: 10px;
-    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
-    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    -moz-box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
+    box-shadow: 16px 14px 31px 1px rgba(0,0,0,0.9);
     padding-bottom: 5px;
 }
 footer{
